# fractal_newest_HRLM

./: README
libfractal/: config.h.in  configure
libfractal/autom4te.cache/: output.0  requests  traces.0  traces.1
libfractal/m4/: ax_check_cuda.m4
libfractal/src/: fractal.h
libfractal/src/core/: CudaKernels.cu  CudaKernels.h  Engine.cc  Engine.h  Matrix.h
libfractal/src/probes/: Makefile.am  Makefile.in  MultiClassifProbe.cc  MultiClassifProbeChar.cc  MultiClassifProbeChar.h  MultiClassifProbeWord.cc  MultiClassifProbeWord.cc_Wordonly  MultiClassifProbeWord.h  MultiClassifProbeWord_cc  MultiClassifProbeWord_h
libfractal/src/util/: .AutoOptimizer.cc.swp  .Evaluator.cc.swp
prj/HRNN/data/ptb/: find_char.py
prj/HRNN/run/: script.sh
prj/HRNN/src/: Makefile  TextDataSet.cc  TextDataSet.h  langModel.cc  langModelNetwork.cc  langModelNetwork.h
