noinst_LTLIBRARIES = libprobes.la

libprobes_la_SOURCES = CTCProbe.cc \
                       MultiClassifProbe.cc \
                       MultiClassifProbeWord.cc \
                       MultiClassifProbeChar.cc \
                       RegressProbe.cc

includesubdir = $(includedir)/fractal/probes

includesub_HEADERS = CTCProbe.h \
                     MultiClassifProbe.h \
                     MultiClassifProbeWord.h \
                     MultiClassifProbeChar.h \
                     RegressProbe.h

